[tool.poetry]
name = "baseball-run-expectancy"
version = "0.1.0"
description = "SABRmetrcis sample for RUN Expectancy"
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
numpy = "^1.19.4"
streamlit = "^0.72.0"
jupyterlab = "^2.2.9"
plotly = "^4.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
